# hackathon

./: LICENSE  README.txt
examples/: README.txt
examples/A/: numa.c  run_examples.sh
examples/B/: .gitignore  Makefile  README.txt  kv.py  kvinit.cpp  pmemkv.cpp  run_cpp.sh  run_cross_lang.sh  run_examples.sh  run_java.sh  run_py.sh
examples/B/PmemkvExample/: Makefile  pom.xml
examples/B/PmemkvExample/src/main/java/: PmemkvExample.java
examples/C/: .gitignore  CMakeLists.txt  README.txt  basic.cpp  bench_config.json  build.sh  pop.json  run.sh  run_benchmark.sh  sizes.json
examples/F/: Makefile  README.txt  lowlevel.c
examples/H/: .gitignore
examples/I/: .gitignore  Makefile  README.txt  hashmap.c  hashmap.h  hmat.c  run.sh
examples/J/: README
examples/J/scripts/: buildE  build_A.sh  build_B.sh  build_C.sh  build_D.sh  build_E.sh  buildall  clean  rmpmem  run  runE  run_A.sh  run_B.sh  run_C.sh  run_D.sh  run_E.sh  runall
examples/J/workshop/A_intarray/: IntArray.java  IntArrayExample.java
examples/J/workshop/B_anyintarray/: IntArray.java  IntArrayExample.java
examples/J/workshop/C_genericarray/: Array.java  ArrayExample.java  Employee.java
examples/J/workshop/D_list/: List.java  ListExample.java
examples/J/workshop/E_recordlog/: RecordLog.java  RecordLogExample.java
examples/J/workshop/util/: Util.java
examples/L/: README.md
examples/L/workshop/: Example01_GettingStarted.java  Example02_SizingHeaps.java  Example03_UsingOtherHeaps.java  Example04_MoreOnTransactions.java  Example05_PerformanceIdioms.java  Example06_WrappingMemoryBlocks.java
examples/M/: .gitignore  CMakeLists.txt  Makefile  README.txt  build.sh  main.cpp  memkind  run.sh  run_hwloc.sh
examples/N/: Makefile  memkind.c  numa  numa_helpers.h
examples/R/: CMakeLists.txt  README.md  build_main.sh  build_simple.sh  client.c  common.c  common.h  run_main.sh  run_simple.sh  run_test_ping.sh  run_test_rping.sh  server.c  simple_client.c  simple_server.c
examples/R/cmake/: FindLIBIBVERBS.cmake
